[#348] remove float32 fields from address settings in favour of brokerProperties, revert for v1alpha5

--- a/deploy/crds/broker_activemqartemis_crd.yaml
+++ b/deploy/crds/broker_activemqartemis_crd.yaml
@@ -303,16 +303,10 @@ spec:
                         pageSizeBytes:
                           description: The page size in bytes to use for an address. Supports byte notation like K, Mb, GB, etc.
                           type: string
-                        redeliveryCollisionAvoidanceFactor:
-                          description: factor by which to modify the redelivery delay slightly to avoid collisions
-                          type: string
                         redeliveryDelay:
                           description: the time (in ms) to wait before redelivering a cancelled message.
                           format: int32
                           type: integer
-                        redeliveryDelayMultiplier:
-                          description: multiplier to apply to the redelivery-delay
-                          type: string
                         redistributionDelay:
                           description: how long (in ms) to wait after the last consumer is closed on a queue before redistributing messages.
                           format: int32
@@ -1988,8 +1982,7 @@ spec:
                         pageSizeBytes:
                           type: string
                         redeliveryCollisionAvoidanceFactor:
-                          description: controller-gen currently doesn't support float types RedeliveryCollisionAvoidanceFactor *float32 `json:"redeliveryCollisionAvoidanceFactor,omitempty"`
-                          type: string
+                          type: number
                         redeliveryDelay:
                           format: int32
                           type: integer
@@ -2344,8 +2337,7 @@ spec:
                         pageSizeBytes:
                           type: string
                         redeliveryCollisionAvoidanceFactor:
-                          description: currentl controller-gen doesn't support float type RedeliveryCollisionAvoidanceFactor *float32 `json:"redeliveryCollisionAvoidanceFactor,omitempty"`
-                          type: string
+                          type: number
                         redeliveryDelay:
                           format: int32
                           type: integer
@@ -2715,13 +2707,12 @@ spec:
                         pageSizeBytes:
                           type: string
                         redeliveryCollisionAvoidanceFactor:
-                          type: string
+                          type: number
                         redeliveryDelay:
                           format: int32
                           type: integer
                         redeliveryDelayMultiplier:
-                          description: controller-gen currently doesn't support float types RedeliveryDelayMultiplier            *float32 `json:"redeliveryDelayMultiplier,omitempty"` RedeliveryCollisionAvoidanceFactor   *float32 `json:"redeliveryCollisionAvoidanceFactor,omitempty"`
-                          type: string
+                          type: number
                         redistributionDelay:
                           format: int32
                           type: integer
