--- a/config/crd/bases/broker.amq.io_activemqartemises.yaml
+++ b/config/crd/bases/broker.amq.io_activemqartemises.yaml
@@ -394,18 +394,11 @@ spec:
                           description: The page size in bytes to use for an address.
                             Supports byte notation like K, Mb, GB, etc.
                           type: string
-                        redeliveryCollisionAvoidanceFactor:
-                          description: factor by which to modify the redelivery delay
-                            slightly to avoid collisions
-                          type: string
                         redeliveryDelay:
                           description: the time (in ms) to wait before redelivering
                             a cancelled message.
                           format: int32
                           type: integer
-                        redeliveryDelayMultiplier:
-                          description: multiplier to apply to the redelivery-delay
-                          type: string
                         redistributionDelay:
                           description: how long (in ms) to wait after the last consumer
                             is closed on a queue before redistributing messages.
@@ -2790,9 +2783,7 @@ spec:
                         pageSizeBytes:
                           type: string
                         redeliveryCollisionAvoidanceFactor:
-                          description: controller-gen currently doesn't support float
-                            types RedeliveryCollisionAvoidanceFactor *float32 `json:"redeliveryCollisionAvoidanceFactor,omitempty"`
-                          type: string
+                          type: number
                         redeliveryDelay:
                           format: int32
                           type: integer
@@ -3157,9 +3148,7 @@ spec:
                         pageSizeBytes:
                           type: string
                         redeliveryCollisionAvoidanceFactor:
-                          description: currentl controller-gen doesn't support float
-                            type RedeliveryCollisionAvoidanceFactor *float32 `json:"redeliveryCollisionAvoidanceFactor,omitempty"`
-                          type: string
+                          type: number
                         redeliveryDelay:
                           format: int32
                           type: integer
@@ -3539,15 +3528,12 @@ spec:
                         pageSizeBytes:
                           type: string
                         redeliveryCollisionAvoidanceFactor:
-                          type: string
+                          type: number
                         redeliveryDelay:
                           format: int32
                           type: integer
                         redeliveryDelayMultiplier:
-                          description: controller-gen currently doesn't support float
-                            types RedeliveryDelayMultiplier            *float32 `json:"redeliveryDelayMultiplier,omitempty"`
-                            RedeliveryCollisionAvoidanceFactor   *float32 `json:"redeliveryCollisionAvoidanceFactor,omitempty"`
-                          type: string
+                          type: number
                         redistributionDelay:
                           format: int32
                           type: integer
