Adding webhook for converting v2alpha5 and v1beta1
Signed-off-by: ruromero <rromerom@redhat.com>

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -8,32 +8,30 @@ resources:
 - bases/broker.amq.io_activemqartemissecurities.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
-#patchesStrategicMerge:
+patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-#- patches/webhook_in_activemqartemises.yaml
-#- patches/webhook_in_activemqartemisaddresses.yaml
-#- patches/webhook_in_activemqartemisscaledowns.yaml
-#- patches/webhook_in_activemqartemissecurities.yaml
-#- patches/webhook_in_activemqartemissecurities.yaml
-#- patches/webhook_in_activemqartemisaddresses.yaml
+- patches/webhook_in_activemqartemises.yaml
+# - patches/webhook_in_activemqartemisscaledowns.yaml
+# - patches/webhook_in_activemqartemissecurities.yaml
+# - patches/webhook_in_activemqartemisaddresses.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
-#- patches/cainjection_in_activemqartemises.yaml
-#- patches/cainjection_in_activemqartemisaddresses.yaml
-#- patches/cainjection_in_activemqartemisscaledowns.yaml
-#- patches/cainjection_in_activemqartemissecurities.yaml
+# - patches/cainjection_in_activemqartemises.yaml
+# - patches/cainjection_in_activemqartemisaddresses.yaml
+# - patches/cainjection_in_activemqartemisscaledowns.yaml
+# - patches/cainjection_in_activemqartemissecurities.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
-#patchesJson6902:
-#- target:
-#    group: "apiextensions.k8s.io"
-#    version: v1 # apiVersion
-#    kind: CustomResourceDefinition
-#    name: activemqartemises.broker.amq.io
-#  path: patches/patch_conversion_webhook_client_ca_bundles.yaml
+patchesJson6902:
+- target:
+    group: "apiextensions.k8s.io"
+    version: v1 # apiVersion
+    kind: CustomResourceDefinition
+    name: activemqartemises.broker.amq.io
+  path: patches/patch_conversion_webhook_client_ca_bundles.yaml
 #- target:
 #    group: "apiextensions.k8s.io"
 #    version: v1 # apiVersion
