--- a/config/crd/patches/webhook_in_activemqartemises.yaml
+++ b/config/crd/patches/webhook_in_activemqartemises.yaml
@@ -12,5 +12,5 @@ spec:
           namespace: system
           name: webhook-service
           path: /convert
-      conversionReviewVersions: ["v1beta1", "v2alpha5", "v2alpha4", "v2alpha3"]
+      conversionReviewVersions: ["v2alpha5", "v1beta1"]
       #- v1
