Patch ENABLE_WEBHOOKS env var
Signed-off-by: ruromero <rromerom@redhat.com>

--- a/config/default/manager_webhook_patch.yaml
+++ b/config/default/manager_webhook_patch.yaml
@@ -8,6 +8,9 @@ spec:
     spec:
       containers:
       - name: manager
+        env:
+          - name: ENABLE_WEBHOOKS
+            value: "true"
         ports:
         - containerPort: 9443
           name: webhook-server
