--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -19,7 +19,7 @@ patchesStrategicMerge:
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
-# - patches/cainjection_in_activemqartemises.yaml
+- patches/cainjection_in_activemqartemises.yaml
 # - patches/cainjection_in_activemqartemisaddresses.yaml
 # - patches/cainjection_in_activemqartemisscaledowns.yaml
 # - patches/cainjection_in_activemqartemissecurities.yaml
