--- a/deploy/MutatingWebhookConfiguration_activemq-artemis-mutating-webhook-configuration.yaml
+++ b/deploy/MutatingWebhookConfiguration_activemq-artemis-mutating-webhook-configuration.yaml
@@ -1,6 +1,8 @@
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
+  annotations:
+    cert-manager.io/inject-ca-from: activemq-artemis-operator/activemq-artemis-serving-cert
   name: activemq-artemis-mutating-webhook-configuration
 webhooks:
 - admissionReviewVersions:
