--- a/deploy/crds/broker_activemqartemis_crd.yaml
+++ b/deploy/crds/broker_activemqartemis_crd.yaml
@@ -2,6 +2,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
+    cert-manager.io/inject-ca-from: activemq-artemis-operator/activemq-artemis-serving-cert
     controller-gen.kubebuilder.io/version: v0.7.0
   name: activemqartemises.broker.amq.io
 spec:
