Simplify provided examples

--- a/examples/address/address_topic_auto_remove.yaml
+++ b/examples/address/address_topic_auto_remove.yaml
@@ -6,5 +6,5 @@ spec:
   addressName: emptyAddress
   queueName: ""
   routingType: multicast
-  removeFromBrokerOnDelete: true
+  removeFromBrokerOnDelete: true  # optional
 
