--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -3,7 +3,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: operator-role
+  name: operator
   namespace: activemq-artemis-operator
 rules:
 - apiGroups:
