[#256] second update operator-sdk from v1.15.0 to v1.28.0

--- a/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
@@ -235,7 +235,7 @@ metadata:
       ]
     capabilities: Seamless Upgrades
     categories: Streaming & Messaging
-    operators.operatorframework.io/builder: operator-sdk-v1.14.0+git
+    operators.operatorframework.io/builder: operator-sdk-v1.28.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
   name: activemq-artemis-operator.v1.0.11
   namespace: placeholder
@@ -286,7 +286,7 @@ spec:
         path: queueConfiguration.autoDeleteMessageCount
         x-descriptors:
         - urn:alm:descriptor:com.tectonic.ui:number
-      - description: ' If the queue is configuration managed'
+      - description: If the queue is configuration managed
         displayName: Configuration Managed
         path: queueConfiguration.configurationManaged
         x-descriptors:
@@ -1040,7 +1040,7 @@ spec:
         path: connectors[0].sniHost
         x-descriptors:
         - urn:alm:descriptor:com.tectonic.ui:text
-      - description: ' Whether or not to enable SSL on this port'
+      - description: Whether or not to enable SSL on this port
         displayName: SSL Enabled
         path: connectors[0].sslEnabled
         x-descriptors:
@@ -1924,7 +1924,9 @@ spec:
   install:
     spec:
       deployments:
-      - name: activemq-artemis-controller-manager
+      - label:
+          control-plane: controller-manager
+        name: activemq-artemis-controller-manager
         spec:
           replicas: 1
           selector:
@@ -2292,4 +2294,49 @@ spec:
   provider:
     name: ArtemisCloud
     url: https://artemiscloud.io
+  relatedImages:
+  - image: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.2
+    name: activemq-artemis-broker-init-2150
+  - image: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.4
+    name: activemq-artemis-broker-init-2160
+  - image: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.10
+    name: activemq-artemis-broker-init-2180
+  - image: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.0
+    name: activemq-artemis-broker-init-2200
+  - image: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.2
+    name: activemq-artemis-broker-init-2210
+  - image: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.5
+    name: activemq-artemis-broker-init-2220
+  - image: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.7
+    name: activemq-artemis-broker-init-2230
+  - image: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.8
+    name: activemq-artemis-broker-init-2250
+  - image: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.9
+    name: activemq-artemis-broker-init-2260
+  - image: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.11
+    name: activemq-artemis-broker-init-2270
+  - image: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.15
+    name: activemq-artemis-broker-init-2280
+  - image: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
+    name: activemq-artemis-broker-kubernetes-2150
+  - image: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.1
+    name: activemq-artemis-broker-kubernetes-2160
+  - image: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.7
+    name: activemq-artemis-broker-kubernetes-2180
+  - image: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.0
+    name: activemq-artemis-broker-kubernetes-2200
+  - image: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.2
+    name: activemq-artemis-broker-kubernetes-2210
+  - image: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.5
+    name: activemq-artemis-broker-kubernetes-2220
+  - image: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.7
+    name: activemq-artemis-broker-kubernetes-2230
+  - image: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.8
+    name: activemq-artemis-broker-kubernetes-2250
+  - image: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.9
+    name: activemq-artemis-broker-kubernetes-2260
+  - image: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.11
+    name: activemq-artemis-broker-kubernetes-2270
+  - image: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.15
+    name: activemq-artemis-broker-kubernetes-2280
   version: 1.0.11
